Fix overlapping search field and button

--- a/client/src/assets/stylesheets/pages/viewAll.scss
+++ b/client/src/assets/stylesheets/pages/viewAll.scss
@@ -8,6 +8,7 @@
   .view-all-header {
     width: 100%;
     margin-top: 1rem;
+    overflow: hidden;
 
     h1 {
       display: inline-block;
